--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 .background {
 	background: url('stonehaven.png');
 	width: 100%;
-	height: 90%;
+	height: 100%;
 	overflow: hidden;
 
 }
@@ -57,6 +57,20 @@ p {
   border-top: 8px solid #4aaaa5;
   margin-top: 10px
 }
+
+.footer3 {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  margin-top: 0px;
+  overflow: hidden;
+}
+
 
 .backColor {
 	background-color: #4aaaa5;
